fix safari wrapping / width: max-content excluding padding bug thing

--- a/css/main.sass
+++ b/css/main.sass
@@ -305,7 +305,6 @@ main
 
     &::after
       content: attr(caption)
-      width: max-content
       position: absolute
       top: 0
       right: 0
@@ -316,6 +315,7 @@ main
 
       @extend .font-mingti
       line-height: 1
+      text-align: center
 
     &.left::after
       right: auto
